service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground
  namespace: dev
  labels:
    app.kubernetes.io/name: playground
    app.kubernetes.io/version: "1"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8888
  selector:
    app: playground
